--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "express-handlebars": "^3.0.0",
     "hbs": "~3.1.0",
+    "jade": "^1.11.0",
     "morgan": "~1.6.1",
     "semantic-ui": "^2.1.8",
     "serve-favicon": "~2.3.0"
