--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.4.1",
     "express": "~4.13.1",
-    "hbs": "~3.1.0",
-    "jade": "^1.11.0",
     "morgan": "~1.6.1",
     "semantic-ui": "^2.1.8",
     "serve-favicon": "~2.3.0"
