--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "log": "^1.4.0",
     "morgan": "~1.6.1",
     "semantic-ui": "^2.1.8",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "winston": "^2.2.0"
   }
 }
