--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "request": "^2.72.0",
     "semantic-ui": "^2.1.8",
     "serve-favicon": "~2.3.0",
-    "stringformat": "0.0.5",
+    "string-format": "^0.5.0",
     "winston": "^2.2.0"
   }
 }
